# DirectXTex

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  DirectXTex_Desktop_2012.sln  DirectXTex_Desktop_2013.sln  DirectXTex_Desktop_2015.sln  DirectXTex_Desktop_2015_Win10.sln  DirectXTex_Desktop_2017.sln  DirectXTex_Desktop_2017_LLVM.sln  DirectXTex_Desktop_2017_Win10.sln  DirectXTex_Desktop_2019.sln  DirectXTex_Desktop_2019_Win10.sln  DirectXTex_Desktop_2022.sln  DirectXTex_Desktop_2022_Win10.sln  DirectXTex_Desktop_2026.slnx  DirectXTex_GDKX_2022.sln  DirectXTex_GDK_2017.sln  DirectXTex_GDK_2019.sln  DirectXTex_GDK_2022.sln  DirectXTex_GXDK_PC_2017.sln  DirectXTex_GXDK_PC_2019.sln  DirectXTex_GXDK_PC_2022.sln  DirectXTex_Windows10.sln  DirectXTex_Windows10.vcxproj  DirectXTex_Windows10_2015.sln  DirectXTex_Windows10_2017.sln  DirectXTex_Windows10_2019.sln  DirectXTex_Windows10_2022.sln  DirectXTex_Windows81.sln  DirectXTex_WindowsPhone81.sln  DirectXTex_XboxOneADK.sln  DirectXTex_XboxOneXDK.sln  DirectXTex_XboxOneXDK_2015.sln  DirectXTex_XboxOneXDK_2017.sln  DirectXTex_XboxOneXDK_PC_2017.sln  HISTORY.md  (+3 more)
.bwoi/: Directory.Build.props  SetupBWOI.targets
.github/: copilot-instructions.md
.nuget/: DirectXTex-config.cmake.in  directxtex_desktop_2015.nuspec  directxtex_desktop_2015.targets  directxtex_desktop_2017.nuspec  directxtex_desktop_2019.nuspec  directxtex_desktop_2019.targets  directxtex_desktop_win10.nuspec  directxtex_desktop_win10.targets  directxtex_uwp.nuspec  directxtex_uwp.targets  signconfig_desktop.xml  signconfig_desktop_2015.xml  signconfig_uwp.xml
Auxiliary/: DirectXTexEXR.cpp  DirectXTexEXR.h  DirectXTexHelper.cpp  DirectXTexJPEG.cpp  DirectXTexJPEG.h  DirectXTexPNG.cpp  DirectXTexPNG.h  DirectXTexXbox.h  DirectXTexXboxD3D11X.cpp  DirectXTexXboxD3D12X.cpp  DirectXTexXboxDDS.cpp  DirectXTexXboxDetile.cpp  DirectXTexXboxImage.cpp  DirectXTexXboxTile.cpp
Common/: CmdLineHelpers.h  d3dx12.h
DDSTextureLoader/: DDSTextureLoader.cpp  DDSTextureLoader.h  DDSTextureLoader11.cpp  DDSTextureLoader11.h  DDSTextureLoader12.cpp  DDSTextureLoader12.h  DDSTextureLoader9.cpp  DDSTextureLoader9.h
DDSView/: DDSView.rc  DDSView_11_Desktop.sln  DDSView_11_Desktop.vcxproj  DDSView_2010.sln  DDSView_2010.vcxproj  DDSView_Desktop_2010.sln  DDSView_Desktop_2010.vcxproj  DDSView_Desktop_2010_SDK80.sln  DDSView_Desktop_2010_SDK80.vcxproj  DDSView_Desktop_2010_SDK81.sln  DDSView_Desktop_2010_SDK81.vcxproj  DDSView_Desktop_2012.sln  DDSView_Desktop_2012.vcxproj  DDSView_Desktop_2013.sln  DDSView_Desktop_2013.vcxproj  DDSView_Desktop_2015.sln  DDSView_Desktop_2015.vcxproj  DDSView_Desktop_2015.vcxproj.filters  DDSView_Desktop_2017.vcxproj  DDSView_Desktop_2017_LLVM.vcxproj  DDSView_Desktop_2019.vcxproj  DDSView_Desktop_2022.vcxproj  DDSView_Desktop_2022.vcxproj.filters  DDSView_Desktop_2026.vcxproj  DDSView_Desktop_2026.vcxproj.filters  ddsview.cpp  ddsview.fx  ddsview.hlsl  hlsl.cmd
DirectXTex/: BC.cpp  BC.h  BC4BC5.cpp  BC6HBC7.cpp  BC7Parallel.cpp  BCDirectCompute.cpp  BCDirectCompute.h  CMakeLists.txt  DDS.h  DirectXTex.h  DirectXTex.inl  DirectXTexCompress.cpp  DirectXTexCompressGPU.cpp  DirectXTexConvert.cpp  DirectXTexD3D11.cpp  DirectXTexD3D12.cpp  DirectXTexDDS.cpp  DirectXTexFlipRotate.cpp  DirectXTexHDR.cpp  DirectXTexImage.cpp  DirectXTexMipmaps.cpp  DirectXTexMisc.cpp  DirectXTexNormalMaps.cpp  DirectXTexP.h  DirectXTexPMAlpha.cpp  DirectXTexResize.cpp  DirectXTexSwizzle.cpp  DirectXTexTGA.cpp  DirectXTexUtil.cpp  DirectXTexWIC.cpp  DirectXTexXbox.h  DirectXTexXboxD3D11X.cpp  DirectXTexXboxD3D12X.cpp  DirectXTexXboxDDS.cpp  DirectXTexXboxDetile.cpp  DirectXTexXboxImage.cpp  DirectXTexXboxTile.cpp  DirectXTex_11_Desktop.sln  DirectXTex_11_Desktop.vcxproj  DirectXTex_11_Metro.sln  (+86 more)
DirectXTex/Shaders/: BC6HEncode.hlsl  BC7Encode.hlsl  CompileShaders.cmd
DirectXTex/Shaders/Compiled/: BC6HEncode_EncodeBlockCS.inc  BC6HEncode_TryModeG10CS.inc  BC6HEncode_TryModeLE10CS.inc  BC7Encode_EncodeBlockCS.inc  BC7Encode_TryMode02CS.inc  BC7Encode_TryMode02CS_cs40.inc  BC7Encode_TryMode137CS.inc  BC7Encode_TryMode456CS.inc
ScreenGrab/: ScreenGrab.cpp  ScreenGrab.h  ScreenGrab11.cpp  ScreenGrab11.h  ScreenGrab12.cpp  ScreenGrab12.h  ScreenGrab9.cpp  ScreenGrab9.h
Texassemble/: AnimatedGif.cpp  Texassemble_Desktop_2010.sln  Texassemble_Desktop_2010.vcxproj  Texassemble_Desktop_2010_SDK80.sln  Texassemble_Desktop_2010_SDK80.vcxproj  Texassemble_Desktop_2010_SDK81.sln  Texassemble_Desktop_2010_SDK81.vcxproj  Texassemble_Desktop_2012.sln  Texassemble_Desktop_2012.vcxproj  Texassemble_Desktop_2013.sln  Texassemble_Desktop_2013.vcxproj  Texassemble_Desktop_2013.vcxproj.filters  Texassemble_Desktop_2015.sln  Texassemble_Desktop_2015.vcxproj  Texassemble_Desktop_2015.vcxproj.filters  Texassemble_Desktop_2017.vcxproj  Texassemble_Desktop_2017_LLVM.vcxproj  Texassemble_Desktop_2019.vcxproj  Texassemble_Desktop_2019_Win10.vcxproj  Texassemble_Desktop_2019_Win10.vcxproj.filters  Texassemble_Desktop_2022.vcxproj  Texassemble_Desktop_2022_Win10.vcxproj  Texassemble_Desktop_2022_Win10.vcxproj.filters  Texassemble_Desktop_2026.vcxproj  Texassemble_Desktop_2026.vcxproj.filters  texassemble.aps  texassemble.cpp  texassemble.rc
Texconv/: ExtendedBMP.cpp  PortablePixMap.cpp  Texconv.rc  Texconv_11_Desktop.sln  Texconv_11_Desktop.vcxproj  Texconv_Desktop_2010.sln  Texconv_Desktop_2010.vcxproj  Texconv_Desktop_2010.vcxproj.filters  Texconv_Desktop_2010_SDK80.sln  Texconv_Desktop_2010_SDK80.vcxproj  Texconv_Desktop_2010_SDK81.sln  Texconv_Desktop_2010_SDK81.vcxproj  Texconv_Desktop_2012.sln  Texconv_Desktop_2012.vcxproj  Texconv_Desktop_2013.sln  Texconv_Desktop_2013.vcxproj  Texconv_Desktop_2015.sln  Texconv_Desktop_2015.vcxproj  Texconv_Desktop_2015.vcxproj.filters  Texconv_Desktop_2017.vcxproj  Texconv_Desktop_2017.vcxproj.filters  Texconv_Desktop_2017_LLVM.vcxproj  Texconv_Desktop_2019.vcxproj  Texconv_Desktop_2019.vcxproj.filters  Texconv_Desktop_2019_Win10.vcxproj  Texconv_Desktop_2022.vcxproj  Texconv_Desktop_2022.vcxproj.filters  (+7 more)
(+99 files in other folders)
